changed CSS for selected file from the list, also hopefully fixed the release event bug on ios

--- a/public/less/app.less
+++ b/public/less/app.less
@@ -684,11 +684,7 @@ a.button:hover {
 }
 
 .selected {
-  background: #4285f4;
-}
-.selected a,
-.selected .light {
-  color: #fff !important;
+  background: #e1e0e3;
 }
 
 .thumb {
@@ -958,14 +954,14 @@ button {
 }
 
 .arrowed .inner {
-  background-image: url(../img/list-arrow.svg);
   background-size: 15px 15px;
   background-repeat: no-repeat;
   background-position: right center;
-  padding-right: 5%;
 }
 
 #scroller li .inner {
+  padding-right: 5px;
+  padding-left: 5px;
   margin-left: 40px;
   height: 44px;
   border-bottom: 1px solid #e1e0e3;
